src/objects/LogEntry__c.object
<CustomObject>
    <fields>
        <fullName>ApexClassApiVersion__c</fullName>
        <description>For more details, refer to https://developer.salesforce.com/docs/atlas.en-us.object_reference.meta/object_reference/sforce_api_objects_apexclass.htm</description>
        <inlineHelpText>The API version for this class. Every class has an API version specified at creation.</inlineHelpText>
        <label>Apex Class API Version</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>v53.0</fullName>
                    <label>v53.0 - Winter &apos;22 Release</label>
                </value>
                <value>
                    <fullName>v52.0</fullName>
                    <label>v52.0 - Summer &apos;21 Release</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ApexClassCreatedDate__c</fullName>
        <label>Apex Class Created Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>ApexClassId__c</fullName>
        <description>For more details, refer to https://developer.salesforce.com/docs/atlas.en-us.object_reference.meta/object_reference/sforce_api_objects_apexclass.htm</description>
        <inlineHelpText>The ID of the Apex class in the current org.</inlineHelpText>
        <label>Apex Class ID</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ApexClassLastModifiedDate__c</fullName>
        <label>Apex Class Last Modified Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>ApexClassName__c</fullName>
        <label>Apex Class</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ApexInnerClassName__c</fullName>
        <inlineHelpText>When the log entry is created via an Apex inner class, this field is populated with the fully-qualified class name (e.g., MyClass.MyInnerClass)</inlineHelpText>
        <label>Apex Inner Class</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ApexMethodName__c</fullName>
        <label>Apex Method</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ComponentApiName__c</fullName>
        <label>Component Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ComponentFunctionName__c</fullName>
        <label>Component Function</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ComponentType__c</fullName>
        <inlineHelpText>Indicates if the component is a lightning web component (lwc) or an aura component</inlineHelpText>
        <label>Component Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Aura</fullName>
                </value>
                <value>
                    <fullName>LWC</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>DatabaseResultCollectionType__c</fullName>
        <label>Database Result Collection Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Single</fullName>
                    <label>Single Record</label>
                </value>
                <value>
                    <fullName>List</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>DatabaseResultJson__c</fullName>
        <label>Database Result JSON</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>DatabaseResultType__c</fullName>
        <label>Database Result Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Database.DeleteResult</fullName>
                </value>
                <value>
                    <fullName>Database.MergeResult</fullName>
                </value>
                <value>
                    <fullName>Database.SaveResult</fullName>
                </value>
                <value>
                    <fullName>Database.UpsertResult</fullName>
                </value>
                <value>
                    <fullName>Database.UpsertResult.Insert</fullName>
                </value>
                <value>
                    <fullName>Database.UpsertResult.Update</fullName>
                </value>
                <value>
                    <fullName>Database.UndeleteResult</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>EpochTimestamp__c</fullName>
        <description>Timestamp in milliseconds elapsed since 1 January 1970 of the log event</description>
        <inlineHelpText>Timestamp in milliseconds elapsed since 1 January 1970 of the log event</inlineHelpText>
        <label>Epoch Timestamp</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>EventUuid__c</fullName>
        <description>The UUID of the LogEntryEvent__e platform event that created this LogEntry__c record.

For more details, refer to https://developer.salesforce.com/docs/atlas.en-us.platform_events.meta/platform_events/platform_events_event_uuid.htm</description>
        <externalId>true</externalId>
        <inlineHelpText>The UUID of the LogEntryEvent__e platform event that created this LogEntry__c record.

For more details, refer to https://developer.salesforce.com/docs/atlas.en-us.platform_events.meta/platform_events/platform_events_event_uuid.htm</inlineHelpText>
        <label>Event UUID</label>
        <length>36</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>ExceptionMessage__c</fullName>
        <label>Exception Message</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>ExceptionStackTrace__c</fullName>
        <label>Exception Stack Trace</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>ExceptionType__c</fullName>
        <label>Exception Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Flow.FaultError</fullName>
                </value>
                <value>
                    <fullName>JavaScript.Error</fullName>
                </value>
                <value>
                    <fullName>System.AsyncException</fullName>
                </value>
                <value>
                    <fullName>System.CalloutException</fullName>
                </value>
                <value>
                    <fullName>System.DmlException</fullName>
                </value>
                <value>
                    <fullName>System.EmailException</fullName>
                </value>
                <value>
                    <fullName>System.ExternalObjectException</fullName>
                </value>
                <value>
                    <fullName>System.InvalidParameterValueException</fullName>
                </value>
                <value>
                    <fullName>System.JSONException</fullName>
                </value>
                <value>
                    <fullName>System.LimitException</fullName>
                </value>
                <value>
                    <fullName>System.ListException</fullName>
                </value>
                <value>
                    <fullName>System.MathException</fullName>
                </value>
                <value>
                    <fullName>System.NoAccessException</fullName>
                </value>
                <value>
                    <fullName>System.NoDataFoundException</fullName>
                </value>
                <value>
                    <fullName>System.NoSuchElementException</fullName>
                </value>
                <value>
                    <fullName>System.NullPointerException</fullName>
                </value>
                <value>
                    <fullName>System.QueryException</fullName>
                </value>
                <value>
                    <fullName>System.SearchException</fullName>
                </value>
                <value>
                    <fullName>System.SecurityException</fullName>
                </value>
                <value>
                    <fullName>System.SerializationException</fullName>
                </value>
                <value>
                    <fullName>System.SObjectException</fullName>
                </value>
                <value>
                    <fullName>System.StringException</fullName>
                </value>
                <value>
                    <fullName>System.TypeException</fullName>
                </value>
                <value>
                    <fullName>System.VisualforceException</fullName>
                </value>
                <value>
                    <fullName>System.XmlException</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>FlowActiveVersionId__c</fullName>
        <description>The ID of the active flow version.</description>
        <inlineHelpText>The ID of the active flow version.</inlineHelpText>
        <label>Flow Active Version ID</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FlowDescription__c</fullName>
        <description>Flow definition information, specified by the org’s admin.</description>
        <inlineHelpText>Flow definition information, specified by the org’s admin.</inlineHelpText>
        <label>Flow Description</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>FlowDurableId__c</fullName>
        <description>For more details, refer to https://developer.salesforce.com/docs/atlas.en-us.object_reference.meta/object_reference/sforce_api_objects_flowdefinitionview.htm</description>
        <inlineHelpText>The ID of the flow definition.</inlineHelpText>
        <label>Flow Durable ID</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FlowLabel__c</fullName>
        <description>For more details, refer to https://developer.salesforce.com/docs/atlas.en-us.object_reference.meta/object_reference/sforce_api_objects_flowdefinitionview.htm</description>
        <inlineHelpText>The label of the flow definition.</inlineHelpText>
        <label>Flow Label</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FlowLastModifiedByName__c</fullName>
        <description>For more details, refer to https://developer.salesforce.com/docs/atlas.en-us.object_reference.meta/object_reference/sforce_api_objects_flowdefinitionview.htm</description>
        <inlineHelpText>The name of the user who last updated this flow definition.</inlineHelpText>
        <label>Flow Last Modified By</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FlowLastModifiedDate__c</fullName>
        <description>For more details, refer to https://developer.salesforce.com/docs/atlas.en-us.object_reference.meta/object_reference/sforce_api_objects_flowdefinitionview.htm</description>
        <label>Flow Last Modified Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>FlowProcessType__c</fullName>
        <description>For more details, refer to https://developer.salesforce.com/docs/atlas.en-us.object_reference.meta/object_reference/sforce_api_objects_flowdefinitionview.htm</description>
        <inlineHelpText>The type of the flow.</inlineHelpText>
        <label>Flow Process Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Appointments</fullName>
                </value>
                <value>
                    <fullName>AutoLaunchedFlow</fullName>
                </value>
                <value>
                    <fullName>CheckoutFlow</fullName>
                </value>
                <value>
                    <fullName>ContactRequestFlow</fullName>
                </value>
                <value>
                    <fullName>CustomerLifecycle</fullName>
                </value>
                <value>
                    <fullName>CustomEvent</fullName>
                </value>
                <value>
                    <fullName>FieldServiceMobile</fullName>
                </value>
                <value>
                    <fullName>FieldServiceWeb</fullName>
                </value>
                <value>
                    <fullName>Flow</fullName>
                </value>
                <value>
                    <fullName>FSCLending</fullName>
                </value>
                <value>
                    <fullName>InvocableProcess</fullName>
                </value>
                <value>
                    <fullName>RoutingFlow</fullName>
                </value>
                <value>
                    <fullName>Survey</fullName>
                </value>
                <value>
                    <fullName>SurveyEnrich</fullName>
                </value>
                <value>
                    <fullName>Workflow</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>FlowTriggerType__c</fullName>
        <description>For more details, refer to https://developer.salesforce.com/docs/atlas.en-us.object_reference.meta/object_reference/sforce_api_objects_flowdefinitionview.htm</description>
        <inlineHelpText>Specifies what causes the flow to run.</inlineHelpText>
        <label>Flow Trigger Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>PlatformEvent</fullName>
                </value>
                <value>
                    <fullName>RecordAfterSave</fullName>
                </value>
                <value>
                    <fullName>RecordBeforeSave</fullName>
                </value>
                <value>
                    <fullName>Scheduled</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>FlowVersionApiVersionRuntime__c</fullName>
        <description>For more details, refer to https://developer.salesforce.com/docs/atlas.en-us.object_reference.meta/object_reference/sforce_api_objects_flowdefinitionview.htm</description>
        <inlineHelpText>The API version for running the flow. This value determines which versioned run-time behavior improvements are adopted by the flow version.</inlineHelpText>
        <label>Flow API Version Runtime</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>v53.0</fullName>
                    <label>v53.0 - Winter &apos;22 Release</label>
                </value>
                <value>
                    <fullName>v52.0</fullName>
                    <label>v52.0 - Summer &apos;21 Release</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>FlowVersionNumber__c</fullName>
        <description>For more details, refer to https://developer.salesforce.com/docs/atlas.en-us.object_reference.meta/object_reference/sforce_api_objects_flowdefinitionview.htm</description>
        <inlineHelpText>The flow’s version number.</inlineHelpText>
        <label>Flow Version Number</label>
        <precision>6</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>FlowVersionRunInMode__c</fullName>
        <description>For more details, refer to https://developer.salesforce.com/docs/atlas.en-us.object_reference.meta/object_reference/sforce_api_objects_flowdefinitionview.htm</description>
        <inlineHelpText>The mode that the flow runs in.</inlineHelpText>
        <label>Flow Run-In Mode</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>DefaultMode</fullName>
                </value>
                <value>
                    <fullName>SystemModeWithSharing</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>HasDatabaseResult__c</fullName>
        <formula>NOT(ISBLANK(TEXT(DatabaseResultType__c)))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Has Database Result</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>HasExceptionStackTrace__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Has Exception Stack Trace</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>HasException__c</fullName>
        <formula>NOT(ISBLANK(TEXT(ExceptionType__c)))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Has Exception</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>HasRecordId__c</fullName>
        <formula>RecordId__c != null</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Has Related Record</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>HasRecordJson__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Has Related Record JSON</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>HasStackTrace__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Has Stack Trace</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>LimitsAggregateQueriesMax__c</fullName>
        <label>Aggregate Queries Max</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>LimitsAggregateQueriesUsed__c</fullName>
        <label>Aggregate Queries Used</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>LimitsAggregateQueries__c</fullName>
        <formula>TEXT(LimitsAggregateQueriesUsed__c ) + &apos; / &apos; + TEXT(LimitsAggregateQueriesMax__c )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Aggregate Queries</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LimitsAsyncCallsMax__c</fullName>
        <label>Async Calls Max</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>LimitsAsyncCallsUsed__c</fullName>
        <label>Async Calls Used</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>LimitsAsyncCalls__c</fullName>
        <formula>TEXT(LimitsAsyncCallsUsed__c) + &apos; / &apos; + TEXT(LimitsAsyncCallsMax__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Async Calls</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LimitsCalloutsMax__c</fullName>
        <label>Callouts Max</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>LimitsCalloutsUsed__c</fullName>
        <label>Callouts Used</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>LimitsCallouts__c</fullName>
        <formula>TEXT(LimitsCalloutsUsed__c ) + &apos; / &apos; + TEXT(LimitsCalloutsMax__c )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Callouts</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LimitsCpuTimeMax__c</fullName>
        <label>CPU Time Max</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>LimitsCpuTimeUsed__c</fullName>
        <label>CPU Time Used</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>LimitsCpuTime__c</fullName>
        <formula>TEXT(LimitsCpuTimeUsed__c) + &apos; / &apos; + TEXT(LimitsCpuTimeMax__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>CPU Time</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LimitsDmlRowsMax__c</fullName>
        <label>DML Rows Max</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>LimitsDmlRowsUsed__c</fullName>
        <label>DML Rows Used</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>LimitsDmlRows__c</fullName>
        <formula>TEXT(LimitsDmlRowsUsed__c) + &apos; / &apos; + TEXT(LimitsDmlRowsMax__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>DML Rows</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LimitsDmlStatementsMax__c</fullName>
        <label>DML Statements Max</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>LimitsDmlStatementsUsed__c</fullName>
        <label>DML Statements Used</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>LimitsDmlStatements__c</fullName>
        <formula>TEXT(LimitsDmlStatementsUsed__c ) + &apos; / &apos; + TEXT(LimitsDmlStatementsMax__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>DML Statements</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LimitsEmailInvocationsMax__c</fullName>
        <label>Email Invocations Max</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>LimitsEmailInvocationsUsed__c</fullName>
        <label>Email Invocations Used</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>LimitsEmailInvocations__c</fullName>
        <formula>TEXT(LimitsEmailInvocationsUsed__c) + &apos; / &apos; + TEXT(LimitsEmailInvocationsMax__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Email Invocations</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LimitsFutureCallsMax__c</fullName>
        <label>Future Calls Max</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>LimitsFutureCallsUsed__c</fullName>
        <label>Future Calls Used</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>LimitsFutureCalls__c</fullName>
        <formula>TEXT(LimitsFutureCallsUsed__c ) + &apos; / &apos; + TEXT(LimitsFutureCallsMax__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Future Calls</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LimitsHeapSizeMax__c</fullName>
        <label>Heap Size Max</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>LimitsHeapSizeUsed__c</fullName>
        <label>Heap Size Used</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>LimitsHeapSize__c</fullName>
        <formula>TEXT(LimitsHeapSizeUsed__c) + &apos; / &apos; + TEXT(LimitsHeapSizeMax__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Heap Size</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LimitsMobilePushApexCallsMax__c</fullName>
        <label>Mobile Push Apex Calls Max</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>LimitsMobilePushApexCallsUsed__c</fullName>
        <label>Mobile Push Apex Calls Used</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>LimitsMobilePushApexCalls__c</fullName>
        <formula>TEXT(LimitsMobilePushApexCallsUsed__c) + &apos; / &apos; + TEXT(LimitsMobilePushApexCallsMax__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Mobile Push Apex Calls</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LimitsPublishImmediateDmlStatementsMax__c</fullName>
        <label>Publish Immediate Statements DML Max</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>LimitsPublishImmediateDmlStatementsUsed__c</fullName>
        <label>Publish Immediate Statements DML Used</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>LimitsPublishImmediateDmlStatements__c</fullName>
        <formula>TEXT(LimitsPublishImmediateDmlStatementsUsed__c) + &apos; / &apos; + TEXT(LimitsPublishImmediateDmlStatementsMax__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Publish Immediate DML Statements</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LimitsQueueableJobsMax__c</fullName>
        <label>Queueable Jobs Max</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>LimitsQueueableJobsUsed__c</fullName>
        <label>Queueable Jobs Used</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>LimitsQueueableJobs__c</fullName>
        <formula>TEXT(LimitsQueueableJobsUsed__c) + &apos; / &apos; + TEXT(LimitsQueueableJobsMax__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Queueable Jobs</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LimitsSoqlQueriesMax__c</fullName>
        <label>SOQL Queries Max</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>LimitsSoqlQueriesUsed__c</fullName>
        <label>SOQL Queries Used</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>LimitsSoqlQueries__c</fullName>
        <formula>TEXT(LimitsSoqlQueriesUsed__c) + &apos; / &apos; + TEXT(LimitsSoqlQueriesMax__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>SOQL Queries</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LimitsSoqlQueryLocatorRowsMax__c</fullName>
        <label>SOQL Query Locator Rows Max</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>LimitsSoqlQueryLocatorRowsUsed__c</fullName>
        <label>SOQL Query Locator Rows Used</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>LimitsSoqlQueryLocatorRows__c</fullName>
        <formula>TEXT(LimitsSoqlQueryLocatorRowsUsed__c) + &apos; / &apos; + TEXT(LimitsSoqlQueryLocatorRowsMax__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>SOQL Query Locator Rows</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LimitsSoqlQueryRowsMax__c</fullName>
        <label>SOQL Query Rows Max</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>LimitsSoqlQueryRowsUsed__c</fullName>
        <label>SOQL Query Rows Used</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>LimitsSoqlQueryRows__c</fullName>
        <formula>TEXT(LimitsSoqlQueryRowsUsed__c) + &apos; / &apos; + TEXT(LimitsSoqlQueryRowsMax__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>SOQL Query Rows</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LimitsSoslSearchesMax__c</fullName>
        <label>SOSL Searches Max</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>LimitsSoslSearchesUsed__c</fullName>
        <label>SOSL Searches Used</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>LimitsSoslSearches__c</fullName>
        <formula>TEXT(LimitsSoslSearchesUsed__c) + &apos; / &apos; + TEXT(LimitsSoslSearchesMax__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>SOSL Searches</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LogTransactionId__c</fullName>
        <formula>Log__r.TransactionId__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Log Transaction ID</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Log__c</fullName>
        <label>Log</label>
        <referenceTo>Log__c</referenceTo>
        <relationshipLabel>Log Entries</relationshipLabel>
        <relationshipName>LogEntries</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>LoggedByUsernameLink__c</fullName>
        <formula>Log__r.LoggedByUsernameLink__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Username</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LoggingLevelOrdinal__c</fullName>
        <label>Logging Level Ordinal</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>LoggingLevelWithImage__c</fullName>
        <formula>CASE(
    TEXT(LoggingLevel__c),
    &apos;ERROR&apos;, IMAGE(&apos;/img/samples/flag_red.gif&apos;, &apos;&apos;, 16, 16),
    &apos;WARN&apos;, IMAGE(&apos;/img/samples/flag_yellow.gif&apos;, &apos;&apos;, 16, 16),
    IMAGE(&apos;/img/samples/flag_green.gif&apos;, &apos;&apos;, 16, 16)
)
+ &apos; &apos; + TEXT(LoggingLevel__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Level</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LoggingLevel__c</fullName>
        <label>Logging Level</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>LoggingLevel</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>MessageMasked__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Indicates if sensitive data was removed from the message, using log entry data mask rules</inlineHelpText>
        <label>Message Masked</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>MessageTruncated__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Indicates if the message was truncated due to being too long to fit into the Message field</inlineHelpText>
        <label>Message Truncated</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Message__c</fullName>
        <label>Message</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>OriginLocation__c</fullName>
        <label>Origin Location</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>OriginType__c</fullName>
        <label>Origin Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Apex</fullName>
                    <color>#333333</color>
                    <label>Apex</label>
                </value>
                <value>
                    <fullName>Component</fullName>
                    <color>#A845DC</color>
                    <label>Component</label>
                </value>
                <value>
                    <fullName>Flow</fullName>
                    <color>#FFCC33</color>
                    <label>Flow</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Origin__c</fullName>
        <formula>TEXT(OriginType__c) + IF(OriginLocation__c == null, &apos;&apos;, &apos;.&apos; + OriginLocation__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Origin</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>RecordCollectionType__c</fullName>
        <label>Related Record Collection Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Single</fullName>
                    <label>Single Record</label>
                </value>
                <value>
                    <fullName>List</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
</CustomObject>